extends Control

@onready var botones = %botones

signal start_game()



func _on_play_pressed():
	pass # Replace with function body.


func _on_load_pressed():
	pass # Replace with function body.

func _on_exit_pressed():
	pass # Replace with function body.

func _on_visibility_changed():
	pass



